@@ -27,7 +27,11 @@
 
 package de.uni_kl.cs.disco.minplus;
 
-import ch.ethz.rtc.kernel.Curve;
+// Due to name collision, these classes not imported,
+// they are referenced by their full names
+//import ch.ethz.rtc.kernel.Curve;
+//import de.uni_kl.cs.disco.curves.Curve;
+
 import ch.ethz.rtc.kernel.CurveMath;
 import ch.ethz.rtc.kernel.Segment;
 import ch.ethz.rtc.kernel.SegmentList;
@@ -46,7 +50,11 @@ import de.uni_kl.cs.disco.nc.CalculatorConfig.OperationClass;
 import java.util.HashSet;
 import java.util.Set;
 
-public abstract class MinPlusDispatch {
+public abstract class MinPlus {
+	// --------------------------------------------------------------------------------------------------------------
+	// Min-Plus-Operation Dispatching
+	// --------------------------------------------------------------------------------------------------------------
+
 	// ------------------------------------------------------------
 	// Convolution
 	// ------------------------------------------------------------
@@ -143,8 +151,8 @@ public abstract class MinPlusDispatch {
 			Segment s = new Segment(0, 0, 0);
 			SegmentList sl = new SegmentList();
 			sl.add(s);
-			Curve result = new Curve(sl);
-			Curve ac2 = null;
+			ch.ethz.rtc.kernel.Curve result = new ch.ethz.rtc.kernel.Curve(sl);
+			ch.ethz.rtc.kernel.Curve ac2 = null;
 			for (ArrivalCurve arrival_curve_2 : arrival_curves) {
 				CurvePwAffine result_curves = CurvePwAffineFactory.getCurveFactory()
 						.createArrivalCurve(arrival_curve_2.toString());
@@ -323,5 +331,86 @@ public abstract class MinPlusDispatch {
 			}
 			return results;
 		}
+	}
+
+	// --------------------------------------------------------------------------------------------------------------
+	// Min-Plus-Operation Input Checks
+	// --------------------------------------------------------------------------------------------------------------
+	/**
+	 * @param obj1
+	 * @param obj2
+	 * @return 0 == none of the objects is null, <br/>
+	 *         1 == the first object is null, <br/>
+	 *         2 == the second object is null, <br/>
+	 *         3 == both objects are null.
+	 */
+	public static int inputNullCheck(Object obj1, Object obj2) {
+		// Usually neither is null so this initial check promises best overall
+		// performance.
+		if (obj1 != null && obj2 != null) {
+			return 0;
+		}
+
+		int return_value = 0;
+
+		if (obj1 == null) {
+			return_value += 1;
+		}
+		if (obj2 == null) {
+			return_value += 2;
+		}
+
+		return return_value;
+	}
+
+	/**
+	 * @param curve_1
+	 * @param curve_2
+	 * @return 0 == none of the objects is a delayed infinite burst, <br/>
+	 *         1 == the first object is a delayed infinite burst, <br/>
+	 *         2 == the second object is a delayed infinite burst, <br/>
+	 *         3 == both objects are a delayed infinite burst.
+	 */
+	public static int inputDelayedInfiniteBurstCheck(de.uni_kl.cs.disco.curves.Curve curve_1,
+			de.uni_kl.cs.disco.curves.Curve curve_2) {
+		int return_value = 0;
+
+		if (curve_1.getDelayedInfiniteBurst_Property()) {
+			return_value += 1;
+		}
+
+		if (curve_2.getDelayedInfiniteBurst_Property()) {
+			return_value += 2;
+		}
+
+		return return_value;
+	}
+
+	/**
+	 * @param set1
+	 * @param set
+	 * @return 0 == none of the sets is empty, <br/>
+	 *         1 == the first sets is empty, <br/>
+	 *         2 == the second sets is empty, <br/>
+	 *         3 == both sets are empty.
+	 */
+	@SuppressWarnings("rawtypes")
+	public static int inputEmptySetCheck(Set set1, Set set2) {
+		// Usually neither is empty so this initial check promises best overall
+		// performance.
+		if (!set1.isEmpty() && !set2.isEmpty()) {
+			return 0;
+		}
+
+		int return_value = 0;
+
+		if (set1.isEmpty()) {
+			return_value += 1;
+		}
+		if (set2.isEmpty()) {
+			return_value += 2;
+		}
+
+		return return_value;
 	}
 }
